# acc

./: CMakeLists.txt  Howto.md
include/: accLib.h
src/: CMakeLists.txt  accLib.cpp  main.cpp
tests/: CMakeLists.txt  accLibTest.cpp
